# optee_rest

./: .gitignore  Makefile
client/: 2022-12-13_18-00_tls_TEE  2022-12-13_18-01_tls_REE  2022-12-16_14-15_http_TEE  2022-12-16_14-46_http_REE  2022-12-16_15-40_socket_TEE  2022-12-16_15-49_socket_REE  2022-12-20_15-03_file_TEE  2022-12-20_16-04_file_REE  2022-12-22_23_07_file_REE  2023-01-12_14-31_http_Internet_TEE  2023-01-12_14-38_http_Internet_REE  2023-02-09_12-13_http_TEE  2023-02-09_12-14_http_REE  2023-02-09_12-25_socket_REE  2023-02-09_12-25_socket_TEE  2023-02-09_13-50_tls_REE  2023-02-09_13-54_tls_TEE  2023-02-09_14-37_file_REE  2023-02-09_15-48_http  2023-02-09_16-12_http_Internet_TEE  2023-02-09_16-22_http_Internet_REE  2023-02-09_16-33_http_Internet_REE  2023-02-09_16-41_http_Internet_TEE  2023-02-09_16-53_http_Internet_REE  Makefile  cacert.pem  collect_file.py  collected_file_TEE  collected_file_TEE2  http_client  http_client.c  relay.c  socket_client.c  tls_client.c
client-rs/: Cargo.toml  Makefile
client-rs/src/: main.rs
file-rs/: Cargo.toml  Makefile
file-rs/src/: main.rs
http_client-rs/: Cargo.toml  Makefile
http_client-rs/src/: main.rs
optee_file-rs/: uuid.txt
optee_file-rs/host/: Cargo.toml  (+1 more)
optee_server-rs/: uuid.txt
server-rs/: Cargo.toml  Makefile
socket_server-rs/: Cargo.toml  Makefile
tls_server-rs/: Cargo.toml  Makefile
tls_server-rs/host/: Makefile
tls_server-rs/host/src/: main.rs
tls_server-rs/src/: main.rs
tls_server-rs/ta/src/: main.rs
tools/: file_measure.py  http_measure.py  measure_time.py  socket_measure.py
(+27 files in other folders)
