[package]
name = "tls_server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = {version = "1.4.0", features=["spin_no_std"] }
rustls = "0.17.0"
rustls-pemfile = "1.0.0"
webpki = "0.21.0"
webpki-roots = "0.19"